--- a/src/components/ImageReveal.css
+++ b/src/components/ImageReveal.css
@@ -2,14 +2,14 @@
     width: 100%;
     max-width: 600px;
     overflow: hidden;
-    transition: clip-path 2s linear;
+    transition: clip-path 3.5s linear;
   }
   
   .reveal-image {
     width: 100%;
-    height: auto;
+    height: 100%;
     clip-path: inset(0 100% 0 0);
-    transition: clip-path 2s linear;
+    transition: clip-path 3.5s linear;
   }
   
   .reveal .reveal-image {
