--- a/src/components/Section1.module.css
+++ b/src/components/Section1.module.css
@@ -200,7 +200,8 @@
 }
 
 .onrampContentParent {
-  width: 396.5px;
+  /* width: 396.5px; */
+  flex: 1 1;
   flex-direction: column;
   align-items: flex-start;
   gap: var(--gap-5xl);
