--- a/src/pages/Rampx.module.css
+++ b/src/pages/Rampx.module.css
@@ -64,7 +64,7 @@
 }
 .section2 {
   /* margin-left: -721px; */
-  height: 711px;
+  height: 720px;
   /* width: 720px; */
   /* border-radius: var(--br-5xl); */
   border-bottom-left-radius: var(--br-5xl);
